unpackaged/main/default/objects/Opportunity/fields/Call_summary__c.field-meta.xml
<CustomField>
    <fullName>Call_summary__c</fullName>
    <label>Call summary</label>
    <type>TextArea</type>
</CustomField>