unpackaged/main/default/objects/Opportunity/fields/Lead_contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_contact__c</fullName>
    <label>Lead contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vivek</fullName>
            </value>
            <value>
                <fullName>John</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>