unpackaged/main/default/objects/Opportunity/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the person who is helping with the technical stuff to advance this opportunity, if applicable.</description>
    <inlineHelpText>Add the name of the person who is helping with the technical stuff to advance this opportunity, if applicable.</inlineHelpText>
    <label>Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>