unpackaged/main/default/objects/Opportunity/fields/Secondary_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Details the 2nd SE assisting this deal.</description>
    <label>Secondary Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>