unpackaged/main/default/objects/Opportunity/fields/Why_Lost__c.field-meta.xml
<CustomField>
    <fullName>Why_Lost__c</fullName>
    <label>Why Lost?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>